--- a/build.gradle
+++ b/build.gradle
@@ -2,12 +2,12 @@ plugins {
     id 'java-library'
 }
 
-repositories { //Хранилище
+repositories {
     mavenCentral() //
 }
 
-dependencies { // Зависимости
-    testImplementation( // Реализация
+dependencies {
+    testImplementation(
             "com.codeborne:selenide:6.19.1",
             "org.junit.jupiter:junit-jupiter:5.10.0",
             'org.slf4j:slf4j-simple:2.0.7'
